# pyqt6-sampler

./: README.md  pyproject.toml
pyqt_sampler/: sampler.py
pyqt_test/: test.py
tests/: test_pyqt_sampler.py  test_pyqt_test.py
