[tool.poetry]
name = "pyqt-test"
version = "0.1.0"
description = ""
authors = ["hundredvisionsguy <cwinikka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
